# culvert_AI

./: .env.example  .gitignore  Makefile  README.md  model.md  package-lock.json  package.json  pyproject.toml  requirements.txt  track.md  vercel.json
api/: findings.js  observations.js  summary.js
api/_lib/: feedback.js  http.js  retrain.js
api/cron/: retrain.js
configs/: example.yml  field_report_inputs.txt  ulster_poughkeepsie.yml
configs/regions/: ulster_poughkeepsie_pilot.geojson
docs/: competitive_strategy.md  data_checklist.md  email_to_professor.md  field_report_integration.md  no_inventory_prediction_plan.md  research_notes.md  research_plan.md  scoring_improvement_plan.md
scripts/: bootstrap_python.sh  ensure_actual_predictions.sh  pull_vercel_observations.js  python.sh  run_actual_ulster_census_pipeline.sh  run_actual_ulster_osm_pipeline.sh  run_demo.sh  run_real_pipeline.sh  run_transfer_from_external_region.sh  run_ulster_pipeline.sh  run_ulster_unlabeled_pipeline.sh  serve_web.sh  verify_web_build.js  write_model_summary.py
server/: dev-server.js
src/culvert_ai/: __init__.py  candidates.py  census.py  cli.py  dem.py  demo.py  evaluate.py  features.py  field_reports.py  io.py  llm_review.py  model.py  observations.py  osm.py  point_analysis.py  region.py  (+2 more)
tests/: test_candidates.py  test_dem.py  test_evaluate.py  test_field_reports.py  test_llm_review.py  test_model_features.py  test_observations.py  test_point_analysis.py  test_region.py  test_scoring.py  test_topography_features.py  test_web_export.py
web/: app.js  index.html  styles.css
(+3 files in other folders)
