[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "culvert-ai"
version = "0.1.0"
description = "Geospatial culvert-location prediction workflow for field inspection planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "geopandas>=0.14",
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "rasterio>=1.3",
  "scikit-learn>=1.3",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[project.scripts]
culvert-ai = "culvert_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
